tests/NormalTests/paczka1/fuzzy1/96037235.err
Error in line 5: ?S86
Error in line 8: iQMBs S869 23,1
Error in line 13: i7TC79AzK S642 49,1
Error in line 33: i7TC79AzK S178 61,43
Error in line 29: iQMBs S178 30,6
Error in line 28: 6D6hv S869 67,8
